# SoftwareEngineering

./: .gitignore  README.MD  README.md
Antiplagiarism/: README.md  docker-compose.yaml
Antiplagiarism/api_gate_away/: main.cpp
Antiplagiarism/api_gateaway/: CMakeLists.txt  main.cpp  utils.h
Antiplagiarism/files_analysis_service/: CMakeLists.txt  Dockerfile  (+2 more)
Antiplagiarism/files_storage_service/: .gitignore  CMakeLists.txt  Dockerfile  bla.txt  main.cpp  openapi.yaml
Antiplagiarism/files_storage_service/app/: file_saver.h
Antiplagiarism/files_storage_service/controllers/: file_crud_controller.cpp  file_crud_controller.h
Antiplagiarism/files_storage_service/infrastructure/config/: config.h  config.yaml
Antiplagiarism/files_storage_service/infrastructure/files_storage/data/files/: e4c3b538-37e0-4fd4-a97c-77673941ea4e.txt
Antiplagiarism/files_storage_service/tests/: config.py  test_add_file.py
big-homework-1/: .gitignore  BankAccount.h  CMakeLists.txt  Category.h  Dockerfile  Operation.cpp  README.md  data.csv  docker-compose.yaml  main.cpp
big-homework-1/database/decorator/: Decorator.h  Facade.h  Logger.h  RetryDecorator.h
big-homework-1/database/migrations/: Database.cpp  Database.h  init_db.sql
big-homework-1/src/: BankAccount.cpp  Category.cpp  DI-container.h  Operation.h  helper.h
big-homework-1/src/executor/: Invoker.h  ProcessRequest.h
big-homework-1/src/executor/commands_implementation/: AddAccount.h  AddCategory.h  ApplyPayment.h  DeleteAccount.h  GetAccounts.h  GetCategories.h  TopUpAccount.h
big-homework-1/src/exporter/: GetData.cpp  GetData.h  SaveData.h
big-homework-1/src/factory/: CommandFactory.h
big-homework-1/src/importer/: ReadData.h
big-homework-1/src/observer/: Observer.h
big-homework-1/tests/: tests.cpp
homework-1/: CMakeLists.txt  InterfaceInventory.h  main.cpp
homework-1/Animal/: Animal.cpp  Animal.h
homework-1/Thing/: Thing.h
homework-1/Zoo/: Zoo.cpp  Zoo.h  ZooVetClinic.h
homework-1/include/: DI-container.h  InterfaceAliveInterface.h
homework-1/include/Animal/: Animal.h
homework-1/include/Thing/: Thing.h
homework-1/include/Zoo/: Zoo.h  ZooVetClinic.h
homework-1/src/: Zoo.cpp  ZooApp.cpp  main.cpp  utils.h
homework-1/tests/: tests.cpp
homework-2/: CMakeLists.txt  README.md  main.cpp  openapi.yaml
homework-2/app/: AnimalService.cpp  AnimalService.h  AnimalTransferService.cpp  AnimalTransferService.h  FeedingOrganizationService.cpp  FeedingOrganizationService.h  FeedingService.cpp  ZooStatisticsService.cpp  ZooStatisticsService.h
homework-2/domain/: Animal.cpp  Animal.h  Enclosure.cpp  Enclosure.h  FeedingSchedule.cpp  FeedingSchedule.h
homework-2/domain/entities/: Animal.cpp
homework-2/domain/entities/animal/: Animal.cpp  Animal.h  AnimalValueObjects.h
homework-2/domain/entities/enclosure/: Enclosure.cpp  Enclosure.h
homework-2/domain/events/: dispatcher.h  domain_event.h  events.h
homework-2/infrastructure/config/: config.cpp  config.h
homework-2/infrastructure/repositories/: AnimalRepository.cpp  AnimalRepository.h  EnclosureRepository.cpp  EnclosureRepository.h
homework-2/presentation/: AnimalController.cpp  AnimalController.h  EnclosureController.cpp  EnclosureController.h  FeedingScheduleController.cpp  FeedingScheduleController.h  ZooStatisticsController.cpp  ZooStatisticsController.h  utils.h
homework-2/tests/: config.py  test_animal_controller.py  test_zoo.py
online-shop/: README.md  docker-compose.yaml
online-shop/api_gate_away/: CMakeLists.txt  Dockerfile  main.cpp  openapi.yaml  utils.h
online-shop/api_gate_away/config/: config.yaml
online-shop/api_gate_away/controllers/: account_operation_controller.h  orders_operation_controller.h
online-shop/api_gate_away/tests/: config.py  test_orders.py  test_payments.py
online-shop/orders_service/: CMakeLists.txt  Dockerfile  main.cpp  openapi.yaml  utils.h
online-shop/orders_service/app/: orders.h
online-shop/orders_service/controllers/: create_order_controller.h  get_orders_controller.cpp  get_orders_controller.h
online-shop/orders_service/infrastructure/config/: config.cpp  config.yaml
online-shop/orders_service/infrastructure/database/: orders_storage.sql
online-shop/orders_service/infrastructure/kafka/: kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h
online-shop/payments_service/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  openapi.yaml  utils.h
online-shop/payments_service/app/: account_balance.h  account_creator.h
online-shop/payments_service/controllers/: account_crud_controller.cpp  account_crud_controller.h
online-shop/payments_service/infrastructure/config/: config.yaml
online-shop/payments_service/infrastructure/database/: database.cpp  payments_storage.sql
online-shop/payments_service/infrastructure/kafka/workers/: order_status_consumer.h  order_to_pay_consumer.h
Аntiplagiarism/api_gateaway/: CMakeLists.txt  main.cpp  utils.h
Аntiplagiarism/api_gateaway/controllers/: analyzing_controller.h  creating_controller.h
Аntiplagiarism/files_analysis_service/: CMakeLists.txt  main.cpp  openapi.yaml
Аntiplagiarism/files_analysis_service/app/: analyzer.cpp  analyzer.h
Аntiplagiarism/files_analysis_service/controllers/: file_analysis_controller.cpp  file_analysis_controller.h  utils.h
Аntiplagiarism/files_analysis_service/infrastructure/config/: config.yaml
Аntiplagiarism/files_analysis_service/infrastructure/database/: files_analysis.sql
Аntiplagiarism/files_storage_service/: CMakeLists.txt  Dockerfile  main.cpp  openapi.yaml
Аntiplagiarism/files_storage_service/app/: file_content_provider.cpp  file_content_provider.h  file_saver.cpp  file_saver.h
Аntiplagiarism/files_storage_service/controllers/: file_crud_controller.cpp  utils.h
Аntiplagiarism/files_storage_service/infrastructure/config/: config.cpp  config.h  config.yaml
Аntiplagiarism/files_storage_service/infrastructure/database/: Database.cpp  Database.h  files_storage.sql
Аntiplagiarism/files_storage_service/presentation/: file_crud_controller.cpp  file_crud_controller.h  utils.h
(+19 files in other folders)
